--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,19 @@
 {
-    "singleQuote": true,
-    "plugins": ["@shufo/prettier-plugin-blade", "prettier-plugin-tailwindcss"],
-    "overrides": [
-        {
-            "files": ["*.blade.php"],
-            "options": {
-                "parser": "blade",
-                "tabWidth": 4
-            }
-        }
-    ],
-    "tailwindStylesheet": "./resources/css/app.css"
+  "singleQuote": true,
+  "plugins": [
+    "@shufo/prettier-plugin-blade",
+    "prettier-plugin-tailwindcss"
+  ],
+  "overrides": [
+    {
+      "files": [
+        "*.blade.php"
+      ],
+      "options": {
+        "parser": "blade",
+        "tabWidth": 4
+      }
+    }
+  ],
+  "tailwindStylesheet": "./resources/css/app.css"
 }
