--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
+  "printWidth": 80,
+  "semi": true,
   "singleQuote": true,
+  "tabWidth": 4,
+  "trailingComma": "all",
   "plugins": [
     "@shufo/prettier-plugin-blade",
     "prettier-plugin-tailwindcss"
