Add pestphp browser testing plugin

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "playwright": "^1.55.0"
     }
 }
