--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.8.2",
         "pestphp/pest": "^4.0.4",
+        "pestphp/pest-plugin-browser": "^4.0",
         "rector/rector": "^2.1.6"
     },
     "autoload": {
