--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,6 +10,9 @@ parameters:
     # Level 10 is the highest level
     level: 7
 
+    tips:
+        treatPhpDocTypesAsCertain: false
+
 #    ignoreErrors:
 #        - '#PHPDoc tag @var#'
 #
