--- a/composer.json
+++ b/composer.json
@@ -1,105 +1,103 @@
 {
-    "$schema": "https://getcomposer.org/schema.json",
-    "name": "laraveldaily/starter-kit",
-    "type": "project",
-    "description": "LaravelDaily Starter Kit for the Laravel framework.",
-    "keywords": [
-        "laravel",
-        "framework"
+  "$schema": "https://getcomposer.org/schema.json",
+  "name": "laraveldaily/starter-kit",
+  "type": "project",
+  "description": "LaravelDaily Starter Kit for the Laravel framework.",
+  "keywords": [
+    "laravel",
+    "framework"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": "^8.2",
+    "laravel/framework": "^12.31.1",
+    "laravel/tinker": "^2.10.1"
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.24.1",
+    "larastan/larastan": "^3.7.2",
+    "laravel/pail": "^1.2.3",
+    "laravel/pint": "^1.25.1",
+    "laravel/sail": "^1.46",
+    "mockery/mockery": "^1.6.12",
+    "nunomaduro/collision": "^8.8.2",
+    "pestphp/pest": "^4.1.0",
+    "pestphp/pest-plugin-browser": "^4.1",
+    "rector/rector": "^2.1.7"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
     ],
-    "license": "MIT",
-    "require": {
-        "php": "^8.2",
-        "blade-ui-kit/blade-icons": "^1.8",
-        "laravel/framework": "^12.28.1",
-        "laravel/tinker": "^2.10.1",
-        "owenvoke/blade-fontawesome": "^2.9.1"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.24.1",
-        "larastan/larastan": "^3.6.1",
-        "laravel/pail": "^1.2.3",
-        "laravel/pint": "^1.24",
-        "laravel/sail": "^1.45",
-        "mockery/mockery": "^1.6.12",
-        "nunomaduro/collision": "^8.8.2",
-        "pestphp/pest": "^4.0.4",
-        "pestphp/pest-plugin-browser": "^4.0",
-        "rector/rector": "^2.1.6"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi",
-            "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
-            "@php artisan migrate --graceful --ansi"
-        ],
-        "dev": [
-            "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
-        ],
-        "lint": [
-            "pint --parallel",
-            "npm run format"
-        ],
-        "refactor": [
-            "rector"
-        ],
-        "test:unit": [
-            "pest --parallel"
-        ],
-        "test:types": [
-            "phpstan analyse"
-        ],
-        "test:lint": [
-            "pint --test",
-            "npm run format:check"
-        ],
-        "test:refactor": [
-            "rector --dry-run"
-        ],
-        "test": [
-            "@test:lint",
-            "@test:unit",
-            "@test:types",
-            "@test:refactor"
-        ]
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "php-http/discovery": true
-        }
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    "post-update-cmd": [
+      "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi",
+      "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
+      "@php artisan migrate --graceful --ansi"
+    ],
+    "dev": [
+      "Composer\\Config::disableProcessTimeout",
+      "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
+    ],
+    "lint": [
+      "pint --parallel",
+      "npm run format"
+    ],
+    "refactor": [
+      "rector"
+    ],
+    "test:unit": [
+      "pest --parallel"
+    ],
+    "test:types": [
+      "phpstan analyse"
+    ],
+    "test:lint": [
+      "pint --test",
+      "npm run format:check"
+    ],
+    "test:refactor": [
+      "rector --dry-run"
+    ],
+    "test": [
+      "@test:lint",
+      "@test:unit",
+      "@test:types",
+      "@test:refactor"
+    ]
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
+    }
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "php-http/discovery": true
+    }
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
